# stargazer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  package.xml
example/: demo.cpp
include/stargazer/: BundleAdjuster.h  CeresLocalizer.h  CoordinateTransformations.h  DebugVisualizer.h  LandmarkCalibrator.h  LandmarkFinder.h  Localizer.h  StargazerConfig.h  StargazerImgTypes.h  StargazerTypes.h  TriangulationLocalizer.h
include/stargazer/cereal/: access.hpp  cereal.hpp  macros.hpp
include/stargazer/cereal/archives/: adapters.hpp  binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
include/stargazer/cereal/details/: helpers.hpp  polymorphic_impl.hpp  static_object.hpp  traits.hpp  util.hpp
include/stargazer/cereal/types/: Eigen.h  array.hpp  base_class.hpp  bitset.hpp  boost_variant.hpp  chrono.hpp  common.hpp  complex.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  memory.hpp  polymorphic.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  vector.hpp
include/stargazer/internal/: CostFunction.h
include/stargazer/libCalibIO/: .hgignore  CalibIO.cpp  CalibIO.hpp  SConscript  calib_ts_schema.txt
include/stargazer/libmv/logging/: logging.h
include/stargazer/libmv/numeric/: dogleg.h  function_derivative.h  levenberg_marquardt.h  numeric.h
res/: LandmarkIDs.m  stargazer.yaml
src/: BundleAdjuster.cpp  CeresLocalizer.cpp  DebugVisualizer.cpp  LandmarkCalibrator.cpp  LandmarkFinder.cpp  Localizer.cpp  TriangulationLocalizer.cpp
test/: test_ConfigHandler.cpp  test_angleaxis.cpp  test_cost_function.cpp  test_landmark.cpp
test/res/: stargazer.yaml  stargazer_test.yaml
